
* Ac_Form_Control_List: improved 'chosen' type support
+ Ac_Admin_Feature_DebugSql: feature that displays current SQL select statement for admin list
+ Ac_Admin_Manager::$dontCount support, also rudimentary no-count support in Ac_Admin_Paginator 
  (will work event if records count is not provided)
* Ac_Admin_Manager::$featureSettings now OVERRIDE values provided 
  by Ac_Model_Mapper_Info::$adminFeatures
* Fix images path in Ac_Admin_ManagerConfigService_J25
* Ac_Facet_Sql_SetImpl::getSelectPrototypeWithFacets(), applyFacetsToSearchInstance() for more
  fine-grained integration with Select managed by outside application
+ Ac_Form_Converter now overrides created proto with Ac_Model_Property->$controlPrototype 
  if it's provided
+ Ac_Sql_Part now use Ac_Util::m instead of array_merge to merge where, order and groupBy clauses,
  that allows to specify keys to combine criteria into AND/OR groups
+ Ac_Url::getJsPostRedirect() now allows to specify which parts of query will pass ino query args
  and which will get into hidden POST fields
+ Ac_Util::flattenArray has $keyGlue arg to join keys instead of ignoring them

2014-02-10

Introduced Ac_Sql_Db->args(); Ac_Form_Control_Params update; small Cg improvements; bugfixes.

- Removed Ac_Legacy_Controller::getContextInfo() since it's surely not used (creates non-existent
  class)
+ Ac_Form_Control_Parameters is now JForms compatible (but requires Joomla2.5+)
+ Ac_Application_Adapter->$appRootDir, Ac_Application_Adapter->getAppRootDir()
+ Ac_Cg_Model->$altDomainPrefix (to prefix model classes with something different instead 
  of Ac_Cg_Domain->$appName
* Fix chmod-related warnings during Ac_Cg_ run
* Ac_Model_Object->isChanged() now accepts second parameter, $strict = true
+ Added Ac_Sql_Db->args() to prefix query call with query arguments
+ Added Ac_Legacy_Controller_Std_Web->$cacheDebug = false to disable firebug-related debug messages,
  changed calls to Ac_Debug::fb
* Fixed some warnings in to-be-obsoleted Ac_Mail


